RESOLVED FIXED 255644
AX: Cache new AXProperty::InsideLink instead of both AXPropertyName::IsVisited and AXPropertyName::IsUnvisited
https://bugs.webkit.org/show_bug.cgi?id=255644
Summary AX: Cache new AXProperty::InsideLink instead of both AXPropertyName::IsVisite...
Tyler Wilcock
Reported 2023-04-18 22:57:28 PDT
We can save a property here.
Attachments
Patch (14.27 KB, patch)
2023-04-18 23:03 PDT, Tyler Wilcock
no flags
Radar WebKit Bug Importer
Comment 1 2023-04-18 22:57:42 PDT
Tyler Wilcock
Comment 2 2023-04-18 23:03:10 PDT
EWS
Comment 3 2023-04-19 03:02:06 PDT
Committed 263130@main (74d7538c2d7f): <https://commits.webkit.org/263130@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 465976 [details].
Note You need to log in before you can comment on or make changes to this bug.