AX: Cache new AXProperty::InsideLink instead of both AXPropertyName::IsVisited and AXPropertyName::IsUnvisited https://bugs.webkit.org/show_bug.cgi?id=255644 rdar://problem/108244131

Reviewed by Chris Fleizach.

We can cache one fewer property while serving the same information.

This patch also moves `isProgressIndicator` to AXCoreObject since its
value is dependent only on AXCoreObject::roleValue(). This saves another
property.

* Source/WebCore/accessibility/AccessibilityNodeObject.cpp:
(WebCore::AccessibilityNodeObject::isProgressIndicator const): Deleted.
* Source/WebCore/accessibility/AccessibilityNodeObject.h:
* Source/WebCore/accessibility/AccessibilityObject.cpp:
(WebCore::AccessibilityObject::insideLink const):
(WebCore::AccessibilityObject::isUnvisited const): Deleted.
(WebCore::AccessibilityObject::isVisited const): Deleted.
* Source/WebCore/accessibility/AccessibilityObject.h:
* Source/WebCore/accessibility/AccessibilityObjectInterface.h:
(WebCore::AXCoreObject::isProgressIndicator const):
(WebCore::AXCoreObject::isUnvisited const):
(WebCore::AXCoreObject::isVisited const):
* Source/WebCore/accessibility/AccessibilityProgressIndicator.h:
* Source/WebCore/accessibility/isolatedtree/AXIsolatedObject.cpp:
(WebCore::AXIsolatedObject::AXIsolatedObject):
(WebCore::AXIsolatedObject::initializeProperties):
* Source/WebCore/accessibility/isolatedtree/AXIsolatedObject.h:
* Source/WebCore/accessibility/isolatedtree/AXIsolatedTree.h:

Canonical link: https://commits.webkit.org/263130@main