Source/WebCore/accessibility/isolatedtree/AXIsolatedTree.h
@@ -30,6 +30,7 @@
 #include "AXTreeStore.h"
 #include "AccessibilityObjectInterface.h"
 #include "PageIdentifier.h"
+#include "RenderStyleConstants.h"
 #include <pal/SessionID.h>
 #include <wtf/HashMap.h>
 #include <wtf/Lock.h>
@@ -110,6 +111,7 @@ enum class AXPropertyName : uint16_t {
     IdentifierAttribute,
     IncrementButton,
     InnerHTML,
+    InsideLink,
     InvalidStatus,
     IsGrabbed,
     IsARIATreeGridRow,
@@ -144,7 +146,6 @@ enum class AXPropertyName : uint16_t {
     IsMathToken,
     IsMultiSelectable,
     IsPressed,
-    IsProgressIndicator,
     IsRequired,
     IsSecureField,
     IsSelected,
@@ -155,10 +156,8 @@ enum class AXPropertyName : uint16_t {
     IsTableRow,
     IsTree,
     IsTreeItem,
-    IsUnvisited,
     IsValueAutofillAvailable,
     IsVisible,
-    IsVisited,
     IsWidget,
     KeyShortcuts,
     Language,
@@ -237,7 +236,7 @@ enum class AXPropertyName : uint16_t {
     VisibleRows,
 };
 
-using AXPropertyValueVariant = std::variant<std::nullptr_t, AXID, String, bool, int, unsigned, double, float, uint64_t, AccessibilityButtonState, Color, URL, LayoutRect, FloatRect, PAL::SessionID, IntPoint, std::pair<unsigned, unsigned>, Vector<AccessibilityText>, Vector<AXID>, Vector<std::pair<AXID, AXID>>, Vector<String>, Path, OptionSet<AXAncestorFlag>, RetainPtr<NSAttributedString>>;
+using AXPropertyValueVariant = std::variant<std::nullptr_t, AXID, String, bool, int, unsigned, double, float, uint64_t, AccessibilityButtonState, Color, URL, LayoutRect, FloatRect, PAL::SessionID, IntPoint, std::pair<unsigned, unsigned>, Vector<AccessibilityText>, Vector<AXID>, Vector<std::pair<AXID, AXID>>, Vector<String>, Path, OptionSet<AXAncestorFlag>, RetainPtr<NSAttributedString>, InsideLink>;
 using AXPropertyMap = HashMap<AXPropertyName, AXPropertyValueVariant, IntHash<AXPropertyName>, WTF::StrongEnumHashTraits<AXPropertyName>>;
 
 struct AXPropertyChange {
